<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RediApp</string>
    <string name="screen1">Quick Delivery At Your \n Doorstep</string>
    <string name="screen2">Flexible Payment</string>
    <string name="screen3">Real-time Tracking</string>
    <string name="screenDesc1">Enjoy quick pick-up and delivery to \n your destination</string>
    <string name="screenDesc2">Different modes of payment either before and after delivery without stress</string>
    <string name="screenDesc3">Track your packages/items from the \n comfort of your home till final destination</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="onb3_text">Already have an account?</string>
    <string name="text_sign1">Create an account</string>
    <string name="text_sign2">Complete the sign up process to get started</string>
    <string name="text_sign3">By ticking this box, you agree to our Terms and conditions and private policy</string>
    <string name="text_sign4">Already have an account?</string>
    <string name="text_sign5">or sign in using</string>
    <string name="name_text">Full name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="pw">Password</string>
    <string name="conf_pw">Confirm Password</string>
    <string name="login_text1">Welcome Back</string>
    <string name="login_text2">Fill in your email and password to continue</string>
    <string name="rem_pw">Remember password</string>
    <string name="fg_pw">Forgot Password?</string>
    <string name="hint_nm">Ivanov Ivan</string>
    <string name="hint_phone">+7(999)999-99-99</string>
    <string name="hint_email">***********@mail.com</string>
    <string name="hint_pw">**********</string>
    <string name="lg_in">Log in</string>
    <string name="fg_pw_text">Forgot Password</string>
    <string name="fg_pw_desc">Enter your email address</string>
    <string name="fg_pw_text1">Remember password? Back to </string>
    <string name="otp">OTP Verification</string>
    <string name="otp_desc">Enter the 6 digit numbers sent to your email</string>
    <string name="otp_recend">If you didn’t receive code, resend after </string>
    <string name="new_pw">New Password</string>
    <string name="enter_new_pw">Enter new password</string>
    <string name="send_otp">Send OTP</string>
    <string name="set_new_pw">Set New Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="track">Track</string>
    <string name="hist">History</string>
    <string name="dark_mode">Enable dark Mode</string>
    <string name="frag_prof1">Edit Profile</string>
    <string name="frag_prof_desc1">Name, phone no, address, email ...</string>
    <string name="frag_prof2">Statements &amp; Reports</string>
    <string name="frag_prof_desc2">Download transaction details, orders, deliveries</string>
    <string name="frag_prof3">Notification Settings</string>
    <string name="frag_prof_desc3">mute, unmute, set location &amp; tracking setting</string>
    <string name="frag_prof4">Card &amp; Bank account settings</string>
    <string name="frag_prof_desc4">change cards, delete card details</string>
    <string name="frag_prof5">Referrals</string>
    <string name="frag_prof_desc5">check no of friends and earn</string>
    <string name="frag_prof6">About Us</string>
    <string name="frag_prof_desc6">know more about us, terms and conditions</string>
    <string name="frag_prof7">Log Out</string>
    <string name="prof_frag_text1">Hello Ken</string>
    <string name="prof_frag_text2">Current balance:</string>
    <string name="not">Notifications</string>
    <string name="nots_text">You have no notifications</string>
    <string name="send_pkg">Send a package</string>
    <string name="pkg_text1">Origin Details</string>
    <string name="pkg_hint1">Address</string>
    <string name="pkg_hint2">State,Country</string>
    <string name="pkg_hint3">Phone number</string>
    <string name="pkg_hint4">Others</string>
    <string name="pkg_text2">Destination Details</string>
    <string name="pkg_text3">Package Details</string>
    <string name="pkg_hint5">package items</string>
    <string name="pkg_hint6">Weight of item(kg)</string>
    <string name="pkg_hint7">Worth of Items</string>
    <string name="pkg_text4">Select delivery type</string>
    <string name="pkg_btn_text1">Instant delivery</string>
    <string name="pkg_btn_text2">Scheduled delivery</string>
    <string name="pay_text1">Your rider is on the way to your destination</string>
    <string name="pay_text2">Tracking Number </string>
    <string name="treck">R-7458-4567-4434-5854</string>
    <string name="pay_btn1">Track my item</string>
    <string name="pay_btn2">Go back to homepage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>