<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="58dp"
        android:layout_marginStart="23dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/text_lin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/fg_pw_text"
            android:textColor="@color/zazaza"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:text="@string/fg_pw_desc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="58dp"
        android:layout_marginHorizontal="23dp"
        app:layout_constraintTop_toBottomOf="@id/text_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/edit_lin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text"
        android:hint="@string/hint_email"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColorHint="@color/grey_light" />
    </LinearLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_lin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:layout_marginHorizontal="23dp"
        app:layout_constraintTop_toBottomOf="@id/button_send"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/text_lin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/fg_pw_text1"
            android:textColor="@color/grey_light"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_text_fg_pw"
            android:textSize="14sp"
            android:clickable="true"
            android:textColor="@color/blue"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_up"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>