<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="58dp"
        android:layout_marginStart="23dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/new_pw_lin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/new_pw"
            android:textColor="@color/zazaza"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:text="@string/enter_new_pw"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="58dp"
        android:layout_marginHorizontal="23dp"
        app:layout_constraintTop_toBottomOf="@id/new_pw_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/pw_lin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_pw"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColorHint="@color/grey_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_pw"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_pw"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColorHint="@color/grey_light" />
    </LinearLayout>

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="100dp"
        android:text="@string/lg_in"
        android:backgroundTint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_lin" />

</androidx.constraintlayout.widget.ConstraintLayout>